Revision history for Perl extension SDL_perl.

* 2.533 
	- Added preliminary SDLx::Music
	- Minor fixes for SDLx::Text [garu]

* 2.532 March 27 2011
	- Tested and released experimental branch

* 2.531_02 March 20 2011
	- using parent Perls context in SDL::Mixer::Music's callbacks instead of TLS [FROGGS]
	- Adding sleep(2) to core_palette.t [FROGGS]
	- Loading threads before Test::More in several SDL::Mixer tests [kthakore]
	- Allow non-hashref constructor args for SDLx::FPS [jtpalmer]
	- Fixed examples: replacing $app->stop with exit in pong [kthakore]
	- Fixed cookbook: using known image file as fallback in pogl_sdl_texture [kthakore]
	- Fixed examples: pong, starry, tie_matrix, sdlx_sprite_animated [jtpalmer]
	- Rewrote INSTALL and README file [Pip]
	- SDLx::Surface: added tests for draw_rect with transparency/translucency [garu]
	- SDLx::Surface: fixed option handling, center and right alignment in write_to/xy [FROGGS]

* 2.531_01 March 9 2011
	New features:
	- SDLx::Surface    draw_polygon(), linking GFX to Surfaces when available [FROGGS]
	- SDLx::Controller exit_on_quit() and eoq() accessors [garu]

	Changes that may break old code:
	- SDLx::Controller now handles eoq option as a non handler [kthakore]

	Experimental features:
	- SDLx::Controller  "delay" option to ease CPU pressure [kthakore]

	Bugfixes:
	- SDLx::Controller proper handler initialization [garu]
	- SDLx::Controller several more tests added [garu]
	- SDLx::Controller::Interface  fixed memory leak [jtpalmer]
	- SDLx::Controller::Interface  fixed angular velocity [jtpalmer]
	- SDLx::Text using SDL::TTF::Font correctly [FROGGS]
	- SDLx::Controller keeps track of paused state [Blaizer]
	- SDLx::Rect proper object construction [garu]

* 2.531 Feb 27 2011
	- protecting dstrect from modification during SDL_BlitSurface [FROGGS]
	- installing SDLpp as a console app [kthakore]
	- improving installation under MacOSX/Darwin [kthakore/FROGGS]